Fully Automated Code

--- a/Atmecs/test-output/emailable-report.html
+++ b/Atmecs/test-output/emailable-report.html
@@ -9,18 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">13,743</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">52</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.atmecs.atmecsqa.pages.PartnersPage</td><td><a href="#m0">gotopartners</a></td><td rowspan="1">1565017230338</td><td rowspan="1">13696</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.atmecs.atmecsqa.helper.HyderabadCareersList</td><td><a href="#m0">get</a></td><td rowspan="1">1565089418162</td><td rowspan="1">16</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.atmecs.atmecsqa.pages.PartnersPage#gotopartners</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.util.Objects.requireNonNull(Unknown Source)
-	at org.openqa.selenium.support.ui.FluentWait.&lt;init&gt;(FluentWait.java:106)
-	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:85)
-	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:45)
-	at com.atmecs.atmecsqa.utils.Utils.explicitWaitClickOperation(Utils.java:23)
-	at com.atmecs.atmecsqa.utils.Utils.backToHome(Utils.java:36)
-	at com.atmecs.atmecsqa.pages.PartnersPage.gotopartners(PartnersPage.java:25)
+<h2>Default test</h2><h3 id="m0">com.atmecs.atmecsqa.helper.HyderabadCareersList#get</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at com.atmecs.atmecsqa.testbase.Base.openBrowser(Base.java:42)
+	at com.atmecs.atmecsqa.helper.HyderabadCareersList.get(HyderabadCareersList.java:26)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
