--- a/Atmecs/test-output/index.html
+++ b/Atmecs/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Subhasri.Natarajan\AppData\Local\Temp\testng-eclipse-300785144\testng-customsuite.xml</span>
+                    <span>C:\Users\Subhasri.Natarajan\AppData\Local\Temp\testng-eclipse--920022135\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.atmecs.atmecsqa.pages.PartnersPage" hash-for-method="gotopartners">gotopartners</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.atmecs.atmecsqa.helper.HyderabadCareersList" hash-for-method="get">get</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -120,22 +120,17 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.atmecs.atmecsqa.pages.PartnersPage</span>
+              <span class="class-name">com.atmecs.atmecsqa.helper.HyderabadCareersList</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="gotopartners">
-                  </a> <!-- gotopartners -->
-                  <span class="method-name">gotopartners</span>
+                  <a name="get">
+                  </a> <!-- get -->
+                  <span class="method-name">get</span>
                   <div class="stack-trace">java.lang.NullPointerException
-	at java.util.Objects.requireNonNull(Unknown Source)
-	at org.openqa.selenium.support.ui.FluentWait.&lt;init&gt;(FluentWait.java:106)
-	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:85)
-	at org.openqa.selenium.support.ui.WebDriverWait.&lt;init&gt;(WebDriverWait.java:45)
-	at com.atmecs.atmecsqa.utils.Utils.explicitWaitClickOperation(Utils.java:23)
-	at com.atmecs.atmecsqa.utils.Utils.backToHome(Utils.java:36)
-	at com.atmecs.atmecsqa.pages.PartnersPage.gotopartners(PartnersPage.java:25)
+	at com.atmecs.atmecsqa.testbase.Base.openBrowser(Base.java:42)
+	at com.atmecs.atmecsqa.helper.HyderabadCareersList.get(HyderabadCareersList.java:26)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -170,7 +165,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Subhasri.Natarajan\AppData\Local\Temp\testng-eclipse-300785144\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Subhasri.Natarajan\AppData\Local\Temp\testng-eclipse--920022135\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -179,7 +174,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.atmecs.atmecsqa.pages.PartnersPage&quot;/&gt;
+      &lt;class name=&quot;com.atmecs.atmecsqa.helper.HyderabadCareersList&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -221,14 +216,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'gotopartners')
-data.setCell(0, 2, 'com.atmecs.atmecsqa.pages.PartnersPage')
-data.setCell(0, 3, 13696);
+data.setCell(0, 1, 'get')
+data.setCell(0, 2, 'com.atmecs.atmecsqa.helper.HyderabadCareersList')
+data.setCell(0, 3, 16);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 16 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -254,11 +249,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.atmecs.atmecsqa.pages.PartnersPage</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.atmecs.atmecsqa.helper.HyderabadCareersList</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">gotopartners</span>
+                <span class="method-name">get</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
