--- a/Atmecs/test-output/old/Default suite/classes.html
+++ b/Atmecs/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.atmecs.atmecsqa.pages.PartnersPage</td>
+<td>com.atmecs.atmecsqa.helper.HyderabadCareersList</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>gotopartners</td>
+<td>get</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
