--- a/Atmecs/test-output/old/Default suite/methods.html
+++ b/Atmecs/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8b466">  <td>19/08/16 12:48:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.openBrowser()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.ShopAccount@3e6fa38a]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="76ae94">  <td>19/08/16 12:48:18</td>   <td>7049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopAccount.getaccountprotal()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.ShopAccount@3e6fa38a]">getaccountprotal</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="e8b466">  <td>19/08/16 12:48:29</td>   <td>17191</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quitBrowser()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.ShopAccount@3e6fa38a]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>19/08/24 16:34:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.openBrowser()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.ShopAccount@3532ec19]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>19/08/24 16:35:52</td>   <td>70550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopAccount.getaccountprotal()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.ShopAccount@3532ec19]">getaccountprotal</td> 
+  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>19/08/24 16:35:56</td>   <td>74642</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quitBrowser()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.ShopAccount@3532ec19]">&lt;&lt;quitBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
 </table>
