ToolsQADemosit with reusability code

--- a/Atmecs/test-output/old/Default suite/methods.html
+++ b/Atmecs/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70999e">  <td>19/08/26 13:51:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.openBrowser()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.PurchasedProductGrandTotalValidation@6093dd95]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="e8b466">  <td>19/08/26 13:52:30</td>   <td>68064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchasedProductGrandTotalValidation.purchaseblack_tshirt()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.PurchasedProductGrandTotalValidation@6093dd95]">purchaseblack_tshirt</td> 
-  <td>main@828441346</td>   <td></td> </tr>
-<tr bgcolor="70999e">  <td>19/08/26 13:53:43</td>   <td>141821</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quitBrowser()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.PurchasedProductGrandTotalValidation@6093dd95]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@828441346</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>19/08/27 18:43:34</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ExtentRportGenerator.setExtent()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.PurchasedProductGrandTotalValidation@77cd7a0]">&gt;&gt;setExtent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="fcfece">  <td>19/08/27 18:43:34</td>   <td>210</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.openBrowser()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.PurchasedProductGrandTotalValidation@77cd7a0]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>19/08/27 18:43:47</td>   <td>12871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchasedProductGrandTotalValidation.purchaseblack_tshirt()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.PurchasedProductGrandTotalValidation@77cd7a0]">purchaseblack_tshirt</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>19/08/27 18:44:05</td>   <td>31321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtentRportGenerator.getResult(org.testng.ITestResult)[pri:0, instance:com.atmecs.toolsqademoshop.testscript.PurchasedProductGrandTotalValidation@77cd7a0]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="f5e5e3">  <td>19/08/27 18:44:05</td>   <td>31321</td> <td>&nbsp;</td><td title="&lt;&lt;ExtentRportGenerator.endReport()[pri:0, instance:com.atmecs.toolsqademoshop.testscript.PurchasedProductGrandTotalValidation@77cd7a0]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
 </table>
